[gd_scene load_steps=6 format=3 uid="uid://c1touvs3ht15k"]

[ext_resource type="PackedScene" uid="uid://dbifrqao8wfwq" path="res://entities/pelota/pelota.tscn" id="1_4ipka"]
[ext_resource type="Script" path="res://main/main.gd" id="1_hn30x"]
[ext_resource type="PackedScene" uid="uid://djaky7olesetp" path="res://entities/players/player.tscn" id="1_isdmp"]
[ext_resource type="Script" path="res://main/field_drop_detector.gd" id="1_kwt4r"]

[sub_resource type="Curve2D" id="Curve2D_nkn7e"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 270, 642, 0, 0, 0, 0, 312.073, 635.971, 0, 0, 0, 0, 418.493, 639.138, 0, 0, 0, 0, 492, 637, 0, 0, 0, 0, 546, 646, -32.8434, -1.05946, 32.8434, 1.05946, 634.632, 638.082, 0, 0, 0, 0, 735.277, 645.471, 0, 0, 0, 0, 783.125, 644.416)
}
point_count = 8

[node name="Node" type="Node"]
script = ExtResource("1_hn30x")
players = ExtResource("1_isdmp")

[node name="cancha" type="Node" parent="."]

[node name="ColorRect" type="ColorRect" parent="cancha"]
offset_left = 30.0
offset_top = 33.0
offset_right = 1122.0
offset_bottom = 553.0
color = Color(0.24246, 0.54, 0.2268, 1)

[node name="fieldDropDetector" type="Panel" parent="cancha"]
modulate = Color(1, 0.24, 0.24, 0)
offset_left = 1.0
offset_right = 1151.0
offset_bottom = 651.0
script = ExtResource("1_kwt4r")

[node name="Jugadores" type="Node" parent="."]

[node name="initial_positions" type="Node" parent="."]

[node name="Player 1" type="Node" parent="initial_positions"]

[node name="Marker2D" type="Marker2D" parent="initial_positions/Player 1"]
position = Vector2(364, 194)

[node name="Marker2D2" type="Marker2D" parent="initial_positions/Player 1"]
position = Vector2(359, 286)

[node name="Marker2D3" type="Marker2D" parent="initial_positions/Player 1"]
position = Vector2(355, 377)

[node name="Marker2D4" type="Marker2D" parent="initial_positions/Player 1"]
position = Vector2(230, 282)

[node name="Marker2D5" type="Marker2D" parent="initial_positions/Player 1"]
position = Vector2(73, 280)

[node name="Player 2" type="Node" parent="initial_positions"]

[node name="Marker2D" type="Marker2D" parent="initial_positions/Player 2"]
position = Vector2(772, 475)

[node name="Marker2D2" type="Marker2D" parent="initial_positions/Player 2"]
position = Vector2(785, 126)

[node name="Marker2D3" type="Marker2D" parent="initial_positions/Player 2"]
position = Vector2(931, 402)

[node name="Marker2D4" type="Marker2D" parent="initial_positions/Player 2"]
position = Vector2(941, 203)

[node name="Marker2D5" type="Marker2D" parent="initial_positions/Player 2"]
position = Vector2(1062, 295)

[node name="cartas" type="Node" parent="."]

[node name="Pelota" parent="." instance=ExtResource("1_4ipka")]
position = Vector2(581, 273)

[node name="CartsConfig" type="Node" parent="."]

[node name="CreationCartPath" type="Path2D" parent="CartsConfig"]
position = Vector2(-63.2889, -571)
scale = Vector2(1.21218, 1.89474)
curve = SubResource("Curve2D_nkn7e")

[node name="PathFollow2D" type="PathFollow2D" parent="CartsConfig/CreationCartPath"]
position = Vector2(270, 642)
rotation = -0.142329

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 919.0
offset_top = 605.0
offset_right = 1106.0
offset_bottom = 636.0
text = "confirmar planificacion"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -172.0
offset_top = -75.0
offset_right = -98.0
offset_bottom = -52.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "jugador"

[node name="Label2" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
text = "1
"

[connection signal="button_up" from="CanvasLayer/Button" to="." method="_on_end_turn"]
